Add format check to CI

--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Check format
+      run: crystal tool format --check
     - name: Install dependencies
       run: shards install
     - name: Run tests
